--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -11,7 +11,7 @@ Outreachy eligibility results
 
 {% include 'home/set_gmail_filters_warning.html' %}
 
-{% if role.application.is_approved %}
+{% if role.is_approved_applicant %}
 
 	<h1>Initial application approved for Outreachy</h1>
 
@@ -34,7 +34,7 @@ Outreachy eligibility results
 
 	{% include 'home/snippet/initial_application.html' %}
 
-{% elif role.application.is_rejected and role.application.reason_denied != 'TIME' and role.application.reason_denied|slice:":5" != 'ALIGN' %}
+{% elif role.is_rejected_applicant and role.application.reason_denied != 'TIME' and role.application.reason_denied|slice:":5" != 'ALIGN' %}
 	<h1>Initial application is not approved</h1>
 	<p>We're sorry, but after reviewing your application,
 	we have determined that you are not a strong applicant for the Outreachy internship program.
@@ -53,7 +53,7 @@ Outreachy eligibility results
 	</p>
 
 	{% include 'home/snippet/initial_application.html' %}
-{% elif role.application.is_rejected and role.application.reason_denied|slice:":5" == 'ALIGN' %}
+{% elif role.is_rejected_applicant and role.application.reason_denied|slice:":5" == 'ALIGN' %}
 	<h1>Initial application is not approved</h1>
 	<p>The Outreachy organizers have been reviewing your initial application, including your essay questions.</p>
 
@@ -73,7 +73,7 @@ Outreachy eligibility results
 	<p>If the information is correct, please take a look at the list of <a href="/opportunities">other opportunities</a> that may be a better fit for you.</p>
 
 	{% include 'home/snippet/initial_application.html' %}
-{% elif role.application.is_rejected and role.application.reason_denied == 'TIME' %}
+{% elif role.is_rejected_applicant and role.application.reason_denied == 'TIME' %}
 
 	<h1>Initial application is not approved</h1>
 
