--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -8,8 +8,7 @@ Outreachy internships working with {{ community.name }}
 
 {% with contributions=role.application.get_projects_contributed_to %}
 
-	{% comment %}This will always show past rounds, since the application period will always be passed.{% endcomment %}
-	{% if not approved_to_see_all_project_details and not mentors_pending_projects %}
+	{% if not current_round.contributions_open.has_passed and not approved_to_see_all_project_details and not mentors_pending_projects %}
 		<p>The information about this community is currently only available to approved mentors and coordinators.
 		If your participation has been approved, you may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a>.</p>
 
@@ -19,7 +18,7 @@ Outreachy internships working with {{ community.name }}
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">subscribing to the Outreachy announcements mailing list</a>.</p>
 
 	{% comment %} If we've reached this else block, it's because the contribution period is open and the person is not a coordinator, mentor, or reviewer.{% endcomment %}
-	{% elif not role.is_approved_applicant and not mentors_pending_projects and not approved_to_see_all_project_details and not role.is_reviewer %}
+	{% elif not current_round.contributions_close.has_passed and not role.is_approved_applicant and not mentors_pending_projects and not approved_to_see_all_project_details and not role.is_reviewer %}
 		{% if not user.comrade %}
 			You may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a> to see this information.</p>
 		{% elif role.is_potential_applicant %}
@@ -27,7 +26,7 @@ Outreachy internships working with {{ community.name }}
 			The deadline for initial applications passed on {{ current_round.initial_applications_close }} at 4pm UTC</p>
 		{% elif role.is_rejected_applicant or role.is_pending_applicant %}
 			<p>This information is only available to applicants who have their initial application approved.
-			Unfortunately, your initial application is not approved.
+			Check your <a href='{% url 'eligibility-results' %}'>initial application results</a> for more details.
 			</p>
 		{% endif %}
 
