Normalize mentor and applicant timelines

--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -1,10 +1,10 @@
 <table class=table>
-	<tr><td>{{ current_round.pingnew }}</td><td>Community sign up opens</td></tr>
-	<tr><td>{{ current_round.lateorgs }} at 4pm UTC</td><td>Deadline for communities to sign up to participate</td></tr>
-	<tr><td>{{ current_round.project_soft_deadline }} at 4pm UTC</td><td>Deadline to submit new Outreachy internship projects</td></tr>
-	<tr><td>{{ current_round.contributions_open }}</td><td>Outreachy applicants start making contributions to projects</td></tr>
-	<tr><td>{{ current_round.contributions_close }} at 4pm UTC</td><td>Deadline for applications to record contributions and submit a final application</td></tr>
-	<tr><td>{{ current_round.mentor_intern_selection_deadline }}</td><td>Deadline for mentors to select interns</td></tr>
-	<tr><td>{{ current_round.internapproval }}</td><td>Outreachy organizers finalize intern selections</td></tr>
-	<tr><td>{{ current_round.internannounce }} at 4pm UTC</td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
+	<tr><td width="175"><b>{{ current_round.pingnew }} at 4pm UTC</b></td><td>Community sign up opens</td></tr>
+	<tr><td><b>{{ current_round.lateorgs }} at 4pm UTC</b></td><td>Deadline for community sign up</td></tr>
+	<tr><td><b>{{ current_round.project_soft_deadline }} at 4pm UTC</b></td><td>Mentor project submission deadline</td></tr>
+	<tr><td><b>{{ current_round.contributions_open }}</b></td><td>Contribution period begins</td></tr>
+	<tr><td><b>{{ current_round.contributions_close }} at 4pm UTC</b></td><td>Final application deadline</td></tr>
+	<tr><td><b>{{ current_round.mentor_intern_selection_deadline }}</b></td><td>Intern selection deadline</td></tr>
+	<tr><td><b>{{ current_round.internapproval }}</b></td><td>Outreachy organizers finalize intern selections</td></tr>
+	<tr><td><b>{{ current_round.internannounce }} at 4pm UTC</b></td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
 </table>
