--- a/home/templates/home/snippet/round_timeline.html
+++ b/home/templates/home/snippet/round_timeline.html
@@ -2,11 +2,11 @@
 
 <table class="table">
 {% comment %}TODO: link the words "initial application" and "contribute to projects" to the right sections in the to-be-written documentation page{% endcomment %}
-    <tr><th width="175">{{ current_round.initial_applications_open }}</th><td>Initial applications open</td></tr>
-    <tr><th>{{ current_round.initial_applications_close }} at 4pm UTC</th><td>Initial application deadline</td></tr>
-    <tr><th>{{ current_round.project_soft_deadline }}</th><td>Project list finalized</td></tr>
-    <tr><th>{{ current_round.contributions_open }} to {{ current_round.contributions_close }}</th><td>Contribute to projects</td></tr>
-    <tr><th>{{ current_round.contributions_close }}<br> at 4pm UTC</th><td>Final application deadline</td></tr>
-    <tr><th>{{ current_round.internannounce }} at 4pm UTC</th><td>Accepted interns announced</td></tr>
-    <tr><th>{{ current_round.internstarts }}<br> to {{ current_round.internends }}</th><td>Internships period</td></tr>
+    <tr><td width="175"><b>{{ current_round.initial_applications_open }} at 4pm UTC</b></td><td>Initial applications open</td></tr>
+    <tr><td><b>{{ current_round.initial_applications_close }} at 4pm UTC</b></td><td>Initial application deadline</td></tr>
+    <tr><td><b>{{ current_round.project_soft_deadline }}</b></td><td>Project list finalized</td></tr>
+    <tr><td><b>{{ current_round.contributions_open }} to {{ current_round.contributions_close }}</b></td><td>Contribute to projects</td></tr>
+    <tr><td><b>{{ current_round.contributions_close }}<br> at 4pm UTC</b></td><td>Final application deadline</td></tr>
+    <tr><td><b>{{ current_round.internannounce }} at 4pm UTC</b></td><td>Accepted interns announced</td></tr>
+    <tr><td><b>{{ current_round.internstarts }}<br> to {{ current_round.internends }}</b></td><td>Internships period</td></tr>
 </table>
