Only approved applicants will get an email

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -84,7 +84,8 @@ Applicant Guide | Outreachy Documentation
 	<li>Outreachy organizers review initial applications and their essays</li>
 	<li>If your application is rejected due to not meeting our eligibility rules, you will be notified immediately</li>
 	<li>If your application is rejected due to not meeting our time commitment rules, you will be notified immediately</li>
-	<li>All other applicants will receive an acceptance or rejection email when the contribution period starts on {{ current_round.contributions_open }}</li>
+	<li>All accepted applicants will receive an email when the contribution period starts on {{ current_round.contributions_open }}</li>
+	<li>Everyone will be able to view their initial application status on <a href='{% url 'eligibility-results' %}'>eligibility results page</a> on {{ current_round.contributions_open }}at 4pm UTC</li>
 	<li>Initial applications are due on {{ current_round.initial_applications_close }}</li>
 </ul>
 
