Change GitHub URL for promotion materials, wordsmith text, and remove old presentation

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -6,26 +6,27 @@ Call for Outreachy community coordinators and mentors
 {% block content %}
 
 <p>Thanks for helping us promote Outreachy internships! This page lists sample tweets, emails, and posters you can use to promote the program.</p>
+
+<p>We welcome translations of our promotional materials into into more languages! <a href="https://github.com/outreachy/creative-works-and-scripts/">Please send a pull request.</a></p>
+
 <h2>Logos</h2>
 
-<p>The Outreachy logo is available in either <a href="https://raw.githubusercontent.com/sagesharp/outreachy/master/creative-works/outreachy-logo-not-square-no-background.svg">svg</a> or <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/outreachy-logo-not-square-no-background.png">png</a> format. Please do not recolor the Outreachy logo. We appreciate <a href="{% url 'contact-organizers' %}">being contacted</a> before the Outreachy logo is used in press releases.<br/></p>
+<p>The Outreachy logo is available in either <a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/outreachy-logo-not-square-no-background.svg">svg</a> or <a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/outreachy-logo-not-square-no-background.png">png</a> format. Please do not recolor the Outreachy logo. We appreciate <a href="{% url 'contact-organizers' %}">being contacted</a> before the Outreachy logo is used in press releases.<br/></p>
 
 <h2>Poster</h2>
 
 <p>Outreachy has various posters available for you to print to promote the program:</p>
 <ul>
-	<li><a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-USletter.pdf">8.5"x11" English poster.</a> If you should need to modify the poster, <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-USletter.svg">an svg file is available</a>.</li>
-	<li><a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-A4.pdf">A4 English poster</a>. If you should need to modify the poster, <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-A4.svg">an svg file is available.</a></li>
-	<li><a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-A4-Brasil.pdf">A4 Portuguese poster</a>. If you should need to modify the poster, <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/poster-applicants-A4-Brasil.svg">an svg file is available.</a></li>
-	<li>English business cards sized to print on moo.com: front (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-front.svg'>svg</a> / <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-front.pdf'>pdf</a>) and back (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-back.svg'>svg</a> / <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-back.pdf'>pdf</a>)</li>
-	<li>We welcome translations of the poster into other languages! <a href="https://github.com/sagesharp/outreachy/tree/master/creative-works">Please send a pull request.</a></li>
+	<li>US letter English poster (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-USletter.pdf'>pdf</a> or <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-USletter.svg'>svg</a>)</li>
+	<li>A4 English poster (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A4.pdf'>pdf</a> or <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A4.svg'>svg</a>)</li>
+	<li>A4 Brazilian Portuguese poster (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A4-Brasil.pdf'>pdf</a> or <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A4-Brasil.svg'>svg</a>)</li>
+	<li>A3 Brazilian Portuguese poster (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A3-Brasil.pdf'>pdf</a> or <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/poster-applicants-A3-Brasil.svg'>svg</a>)</li>
+	<li>English business cards sized to print on moo.com: front (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-front.pdf'>pdf</a> / <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-front.svg'>svg</a>) and back (<a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-back.pdf'>pdf</a> / <a href='https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/business-card-sticker-3.5-inch-2-inch-back.svg'>svg</a>)</li>
 </ul>
 
 <h2>Presentation</h2>
 
-<p>Here is an hour-long presentation that introduces open source, Outreachy, and Google Summer of code can be found here: <a href="https://github.com/sagesharp/outreachy/blob/master/creative-works/open-source-101-gsoc-outreachy.pdf">pdf</a>, <a href="https://github.com/sagesharp/outreachy/blob/master/creative-works/open-source-101-gsoc-outreachy.odp">odp</a>.</p>
-
-<p>Here is a four-slide presentation you can use and adapt to speak about Outreachy: <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/Outreachy_Intro.pdf">pdf</a>, <a href="https://github.com/sagesharp/outreachy/raw/master/creative-works/Outreachy_Intro.odp">odp</a>.</p>
+<p>You can use this presentation that introduces open source, Outreachy, and Google Summer of Code: (<a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/open-source-101-gsoc-outreachy.pdf">pdf</a> or <a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/open-source-101-gsoc-outreachy.odp">odp</a>)</p>
 
 <h2>Twitter</h2>
 
